--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
         .card-animation:nth-child(7) { animation-delay: 0.7s; }
         .card-animation:nth-child(8) { animation-delay: 0.8s; }
         .card-animation:nth-child(9) { animation-delay: 0.9s; }
+        .card-animation:nth-child(10) { animation-delay: 1.0s; } /* Добавлено для Synapse */
 
         /* Мобильная адаптация */
         @media (max-width: 768px) {
@@ -497,7 +498,14 @@
                 <h3 class="service-title">Neuron Password Generator</h3>
                 <p class="service-desc">Генератор надежных паролей с настройкой сложности</p>
             </a>
-        </div>
+            
+            <a href="https://neuron-ecosystem.github.io/Synapse/" class="service-card card-animation" target="_blank">
+                <div class="service-icon">
+                    <i class="fas fa-lock"></i> </div>
+                <h3 class="service-title">Neuron Synapse</h3>
+                <p class="service-desc">P2P чат с шифрованием и повышенной анонимностью</p>
+            </a>
+            </div>
 
         <div class="social-section">
             <h3 class="social-title">Мы в социальных сетях</h3>
