--- a/index.html
+++ b/index.html
@@ -354,7 +354,8 @@
         .card-animation:nth-child(7) { animation-delay: 0.7s; }
         .card-animation:nth-child(8) { animation-delay: 0.8s; }
         .card-animation:nth-child(9) { animation-delay: 0.9s; }
-        .card-animation:nth-child(10) { animation-delay: 1.0s; } /* Добавлено для Synapse */
+        .card-animation:nth-child(10) { animation-delay: 1.0s; }
+        .card-animation:nth-child(11) { animation-delay: 1.1s; } /* Добавлено для Neuron AI */
 
         /* Мобильная адаптация */
         @media (max-width: 768px) {
@@ -443,6 +444,14 @@
                 <p class="service-desc">Конвертер валют, единиц измерения и температур</p>
             </a>
 
+            <a href="https://neuron-ai-eta.vercel.app/" class="service-card card-animation" target="_blank">
+                <div class="service-icon">
+                    <i class="fas fa-robot"></i>
+                </div>
+                <h3 class="service-title">Neuron AI</h3>
+                <p class="service-desc">Искусственный интеллект для решения повседневных задач</p>
+            </a>
+
             <a href="studio.html" class="service-card card-animation">
                 <div class="service-icon">
                     <i class="fas fa-palette"></i>
@@ -505,7 +514,7 @@
                 <h3 class="service-title">Neuron Synapse</h3>
                 <p class="service-desc">P2P чат с шифрованием и повышенной анонимностью</p>
             </a>
-            </div>
+        </div>
 
         <div class="social-section">
             <h3 class="social-title">Мы в социальных сетях</h3>
@@ -545,7 +554,6 @@
     <div class="copy-notification" id="copy-notification">Email скопирован!</div>
 
     <script>
-        // ... (Код для частиц и анимаций остается без изменений)
         function createParticles() {
             const particles = document.getElementById('particles');
             for (let i = 0; i < 50; i++) {
